--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -15,7 +15,7 @@ jobs:
     needs: [check]
     steps:
     - uses: actions/checkout@v2 
-    - run: cmake . &&  cmake --build . &&  CTEST_OUTPUT_ON_FAILURE=TRUE cmake --build . --target test
+    - run: make build
 
     - name: Upload artifacts
       uses: actions/upload-artifact@v2
@@ -27,4 +27,5 @@ jobs:
     needs: [build]
     steps:
       - uses: actions/checkout@v2 
-      - run: make test
+      - run: cmake . &&  cmake --build . &&  CTEST_OUTPUT_ON_FAILURE=TRUE cmake --build . --target test
+
